--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
   "name": "csc333-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "author": "Arinze Okeke",
   "license": "MIT",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "boom": "^7.2.0",
+    "compression": "^1.7.3",
     "cors": "^2.8.4",
+    "debug": "^4.1.0",
+    "dotenv": "^6.1.0",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "helmet": "^3.14.0",
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.3",
     "mongoose-unique-validator": "^2.0.2",
-    "randomstring": "^1.1.5"
+    "randomstring": "^1.1.5",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
