--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,15 @@
     "bulma": "^0.7.2",
     "date-fns": "^1.29.0",
     "emotion": "^9.2.12",
+    "final-form": "^4.10.0",
+    "font-awesome": "^4.7.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-ace": "^6.2.0",
     "react-dom": "^16.5.2",
+    "react-final-form": "^3.6.7",
     "react-loadable": "^5.5.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "socket.io-client": "^2.1.1",
     "unstated": "^2.1.1"
