--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "final-form": "^4.10.0",
     "helmet": "^3.14.0",
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.3.0",
@@ -27,6 +28,7 @@
     "mongoose": "^5.3.3",
     "mongoose-unique-validator": "^2.0.2",
     "randomstring": "^1.1.5",
+    "react-final-form": "^3.6.7",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
