--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "lodash.debounce": "^4.0.8",
     "method-override": "^3.0.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.3",
     "mongoose-unique-validator": "^2.0.2",
     "randomstring": "^1.1.5",
