--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "csc333-project",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": {
+    "node": "8.6.0",
+    "npm": "5.3.0"
+  },
   "author": "Arinze Okeke",
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon server.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
