--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "engines": {
-    "node": "8.6.0",
-    "npm": "5.3.0"
+    "node": "8.11.2",
+    "npm": "5.6.0"
   },
   "author": "Arinze Okeke",
   "license": "MIT",
@@ -35,6 +35,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.3.3",
     "mongoose-unique-validator": "^2.0.2",
+    "morgan": "^1.9.1",
     "randomstring": "^1.1.5",
     "react-final-form": "^3.6.7",
     "socket.io": "^2.1.1"
