--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "server": "nodemon server.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "doc": "apidoc -e \"(node_modules|public|client)\" -o client/build/apidoc",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client && npm run doc"
   },
   "dependencies": {
+    "apidoc": "^0.17.6",
     "body-parser": "^1.18.3",
     "boom": "^7.2.0",
     "compression": "^1.7.3",
+    "concurrently": "^4.0.1",
     "cors": "^2.8.4",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
